// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should not render pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Explorer
                  </div>
                  <div
                    class="sc-bdnxRM AFVmm text-theme-warning-600"
                    height="16"
                    width="16"
                  >
                    <svg>
                      shield-check-mark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Utility
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Avatars
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-theme"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Theme
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-10 w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render custom number of skeletons 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Explorer
                  </div>
                  <div
                    class="sc-bdnxRM AFVmm text-theme-warning-600"
                    height="16"
                    width="16"
                  >
                    <svg>
                      shield-check-mark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Utility
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Avatars
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-theme"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Theme
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--drakula-theme"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Breno Polanski
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    Drakula Theme
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-10 w-full"
    >
      <nav
        class="Pagination__Wrapper-sc-1rc32i9-0 gurSFZ"
        data-testid="Pagination"
      >
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <button
            aria-current="true"
            aria-label="Page 1"
            class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy current-page"
            type="button"
          >
            1
          </button>
          <button
            aria-label="Page 2"
            class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
            type="button"
          >
            2
          </button>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
          data-testid="Pagination__next"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Next
            <div
              class="sc-bdnxRM AkeAK ml-2"
              height="10"
              width="10"
            >
              <svg>
                chevron-right-small.svg
              </svg>
            </div>
          </div>
        </button>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render skeletons 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCardSkeleton"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
            data-testid="Card"
            tabindex="-1"
            type="button"
          >
            <div
              class="flex overflow-hidden items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-xl w-25 h-25"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 100px; height: 100px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col"
              >
                <div
                  class="flex items-center h-5"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-1 h-7"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 1px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2"
                >
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 20px; height: 20px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 70px; height: 14px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Explorer
                  </div>
                  <div
                    class="sc-bdnxRM AFVmm text-theme-warning-600"
                    height="16"
                    width="16"
                  >
                    <svg>
                      shield-check-mark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Utility
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Avatars
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-theme"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Theme
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without plugins 1`] = `
<DocumentFragment>
  <div
    class="border border-solid border-theme-secondary-300 dark:border-theme-secondary-800 rounded-lg text-theme-secondary-text text-center leading-5 p-6"
    data-testid="PluginGrid__empty-message"
  >
    <div>
      This category has no available Plugins yet.
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Avatars
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Other
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              />
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-10 w-full"
    >
      <nav
        class="Pagination__Wrapper-sc-1rc32i9-0 gurSFZ"
        data-testid="Pagination"
      >
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
          data-testid="Pagination__previous"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="sc-bdnxRM AkeAK mr-2"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
            Previous
          </div>
        </button>
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <button
            aria-label="Page 1"
            class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            aria-label="Page 2"
            class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy current-page"
            type="button"
          >
            2
          </button>
          <button
            aria-label="Page 3"
            class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
            type="button"
          >
            3
          </button>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
          data-testid="Pagination__next"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Next
            <div
              class="sc-bdnxRM AkeAK ml-2"
              height="10"
              width="10"
            >
              <svg>
                chevron-right-small.svg
              </svg>
            </div>
          </div>
        </button>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger update by addon button 1`] = `
<div>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-3 gap-4.5"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div>
          <button
            class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
            data-testid="Card"
            type="button"
          >
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
              >
                <div
                  class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fyVFIH bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                  data-testid="PluginImage"
                >
                  <svg>
                    plugin-logo-placeholder.svg
                  </svg>
                </div>
              </div>
              <div
                class="flex flex-col truncate"
              >
                <span
                  class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ARK.io
                </span>
                <div
                  class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                >
                  <div
                    class="truncate"
                  >
                    ARK Explorer
                  </div>
                  <div
                    class="sc-bdnxRM AFVmm text-theme-warning-600"
                    height="16"
                    width="16"
                  >
                    <svg>
                      shield-check-mark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      categories.svg
                    </svg>
                  </div>
                  <span
                    class="text-sm font-semibold"
                  >
                    Utility
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="flex items-center space-x-2"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="PluginCard__update-available"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      arrows-rotate.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ellipsis-vertical.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-10 w-full"
    />
  </div>
</div>
`;
